mhc-aks-v2.yaml
##################################################################################################
# Backend services
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: mhc-back
  labels:
    app: mhc-back
    service: mhc-back
spec:
  type: ClusterIP
  ports:
    - port: 6379
  selector:
    app: mhc-back
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mhc-back
  labels:
    app: mhc-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mhc-back
  template:
    metadata:
      labels:
        app: mhc-back
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "6379"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: mhc-back
          image: redis
          ports:
            - containerPort: 6379
              name: redis

##################################################################################################
# Frontend services
##################################################################################################
---
apiVersion: v1
kind: Service
metadata:
  name: mhc-front
  labels:
    app: mhc-front
    service: mhc-front
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: mhc-front
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mhc-front
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  selector:
    matchLabels:
      app: mhc-front
  template:
    metadata:
      annotations:
          prometheus.io/scrape: "true"
          prometheus.io/port: "80"
          prometheus.io/path: "/metrics"
      labels:
        app: mhc-front
    spec:
      containers:
        - name: mhc-front
          image: #{ACR}#/myhealth.web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 250m
            limits:
              cpu: 500m
